--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "license": "ISC",
   "dependencies": {
+    "api2pdf": "^1.1.0",
+    "clearbit": "^1.3.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
