--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "nz0b7vzndw472t2t",
-    "password": "z7mbxibkii44c0hu",
-    "database": "kyeb0lw8au3w6qdu",
+    "username": "oqor573w2eke3hhm",
+    "password": "q1iz588iwbwvxelj",
+    "database": "iky3cgjfv8v77r4b",
     "host": "q3vtafztappqbpzn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
