--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
   "development": {
-    "username": "oqor573w2eke3hhm",
-    "password": "q1iz588iwbwvxelj",
-    "database": "iky3cgjfv8v77r4b",
+    "username": "ryfazwxmek92qq7m",
+    "password": "ljp204g839mlgpso",
+    "database": "u0jznfyuhbmqw6m0",
     "host": "q3vtafztappqbpzn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "",
-    "database": "testdb",
-    "host": "localhost",
+    "username": "ryfazwxmek92qq7m",
+    "password": "ljp204g839mlgpso",
+    "database": "u0jznfyuhbmqw6m0",
+    "host": "q3vtafztappqbpzn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
     "logging": false
   },
